Fix about page layout, remove dark mode

--- a/static/style.css
+++ b/static/style.css
@@ -42,13 +42,14 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
+/* Maybe later :) */
+/* @media (prefers-color-scheme: dark) {
   :root {
     --color-text: #f8f8f8;
     --color-bg: #000e1a;
     --color-bg-alt: black;
   }
-}
+} */
 
 /*
  * Layout
